Enhance layout in style.css by introducing flexbox for body, header, footer, and content sections; improve alignment, spacing, and styles for links and buttons to ensure better organization and visual consistency.

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,54 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.header {
+  margin-bottom: auto;
+  background-color: #eeeeee;
+}
+
+.footer {
+  margin-top: auto;
+  background-color: #eeeeee;
+  padding: 16px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 16px;
 }
 
 img {
   width: 600px;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
 }
 
 button {
@@ -16,6 +60,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
